--- a/TPs Angular/TP2/ListeEtudiants/src/styles.css
+++ b/TPs Angular/TP2/ListeEtudiants/src/styles.css
@@ -1,1 +1,24 @@
-/* You can add global styles to this file, and also import other style files */
+h1 {
+  color: #369;
+  font-family: Arial, sans-serif;
+  font-size: 250%;
+}
+
+h2, h3 {
+  font-family: Arial, sans-serif;
+  color: #444;
+  font-weight: lighter ;
+}
+
+body {
+  margin: 2em;
+}
+
+body, input[type="text"], button {
+  color: #333;
+  font-family:Cambria, Georgia;
+}
+
+* {
+  font-family: Arial, Helvetica, sans-serif;
+}
