--- a/TPs Angular/TP2/ListeEtudiants/src/app/etudiant/etudiant.html
+++ b/TPs Angular/TP2/ListeEtudiants/src/app/etudiant/etudiant.html
@@ -1,25 +1,30 @@
-<h2>{{ etudiant.name }}</h2>
-<div><strong>id: </strong> {{etudiant.id}}</div>
-<div><strong>name:</strong> {{etudiant.name | uppercase}} </div>
+<div class="student-card">
 
-<table border="1">
-  <tr>
-    <th>Last Name</th>
-    <th>Average</th>
-  </tr>
-  <tr>
-    <td>{{ lastName }}</td>
-    <td>{{ average }}</td>
-  </tr>
-</table>
-<div><strong>Birth Date:</strong> {{ birthDate | date:'longDate' }}</div>
-<div><strong>Taux de Presence:</strong> {{ tauxPresence | percent:'1.2-2' }}</div>
-<div>
-  <strong>Argent de Poche:</strong> {{ argentDePoche | currency:'EUR':'symbol':'1.2-2' }}
-</div>
-<div>
-  <label>
-    <strong>name: </strong>
-    <input [(ngModel)]="etudiant.name" placeholder="name"/>
-  </label>
+  <h2>{{ etudiant.name }}</h2>
+
+  <div class="info-row"><strong>ID:</strong> {{ etudiant.id }}</div>
+  <div class="info-row"><strong>Name:</strong> {{ etudiant.name | uppercase }}</div>
+
+  <table>
+    <tr>
+      <th>Last Name</th>
+      <th>Average</th>
+    </tr>
+    <tr>
+      <td>{{ lastName }}</td>
+      <td>{{ average }}</td>
+    </tr>
+  </table>
+
+  <div class="info-row"><strong>Birth Date:</strong> {{ birthDate | date:'longDate' }}</div>
+  <div class="info-row"><strong>Taux de Presence:</strong> {{ tauxPresence | percent:'1.2-2' }}</div>
+  <div class="info-row"><strong>Argent de Poche:</strong> {{ argentDePoche | currency:'EUR':'symbol':'1.2-2' }}</div>
+
+  <div class="input-row">
+    <label>
+      <strong>Name:</strong>
+      <input [(ngModel)]="etudiant.name" placeholder="name" />
+    </label>
+  </div>
+
 </div>
