--- a/TPs Angular/TP5-forms/src/app/etudiant-form/etudiant-form.html
+++ b/TPs Angular/TP5-forms/src/app/etudiant-form/etudiant-form.html
@@ -1,9 +1,14 @@
+<div [hidden]="submitted">
 <div class="container">
   <h1>Formulaire Etudiant</h1>
-  <form #etudiantForm="ngForm">
+  <form (ngSubmit)="onSubmit()" #etudiantForm="ngForm">
     <div class="form-group">
       <label for="name">Name</label>
-      <input type="text" class="form-control" id="name" required [(ngModel)]="model.name" name="name" #spy>TODO: remove this: {{model.name}}
+      <input type="text" class="form-control" id="name" required [(ngModel)]="model.name" name="name" #name="ngModel">
+        <div [hidden]="name.valid || name.pristine"
+        class="alert alert-danger">
+        Name is required
+        </div>
     </div>
     <div class="form-group">
       <label for="Surname">SurName</label>
@@ -15,6 +20,28 @@
         <option *ngFor="let pow of classes" [value]="pow">{{pow}}</option>
       </select>
     </div>
-    <button type="submit" class="btn btn-success">Submit</button>
+      <button type="submit" class="btn btn-
+      success" [disabled]="!etudiantForm.form.valid">Submit</button>  
   </form>
+</div>
+<button type="button" class="btn btn-
+default" (click)="newEtudiant()">New Etudiant</button>
+</div>
+
+<div [hidden]="!submitted">
+<h2>You submitted the following:</h2>
+<div class="row">
+<div class="col-xs-3">Name</div>
+<div class="col-xs-9">{{ model.name }}</div>
+</div>
+<div class="row">
+<div class="col-xs-3">Sur Name</div>
+<div class="col-xs-9">{{ model.Surname }}</div>
+</div>
+<div class="row">
+<div class="col-xs-3">Classe</div>
+<div class="col-xs-9">{{ model.classe }}</div>
+</div>
+<br>
+<button class="btn btn-primary" (click)="submitted=false">Edit</button>
 </div>
